--- a/views/main.html
+++ b/views/main.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <div class="main-container">
-        <h1>Welcome, User</h1>
-        <a href="/login" class="login-button">Login</a>
+
+        <h1>Main Menu</h1>
+        <br>
+        <img src="/img1.png" alt="Marvel Logo" class="login-image">
+        <br>
+        <a href="/game" class="login-button" id="Find_game">Find game</a><br>
+        <!-- <a href="/collection" class="login-button" id="collection">Collection</a><br> -->
+
+
+
+        <!-- <a href="/login" class="login-button">Login</a> -->
+
+
         <a href="/reminder" class="login-button">Reminder</a>
         <a href="/logout" class="login-button">Logout</a>
     </div>
