--- a/views/battlefield.html
+++ b/views/battlefield.html
@@ -15,7 +15,7 @@
     <div class="field">
         <div class="player_bar">
             <img class="deck" src="assets/card_red.jpeg" alt="deck">
-            <div class="hand"></div>
+            <div id="user_2_hand" class="hand"></div>
             <div class="curency_container">
                 <img class="curency" src="assets/currency.png" alt="currency">
                 <span id="player_2_currency">10/10</span>
@@ -26,94 +26,7 @@
         <div class="play_area"></div>
         <div class="player_bar">
             <img class="deck" src="assets/card_blue.jpeg" alt="deck">
-            <div class="hand">
-
-                <!-- Картки в руці, заміню на js -->
-
-                <!-- <div class="background">
-                    <div class="circle">
-                        <img id="curr" src="assets/currency.png" alt="cost">
-                        <span id="card_cost">4</span>
-            
-                    </div>
-                    <img id="charecter" src="assets/panther.jpeg" alt="hero">
-                    <div class="blank">
-                        <span id="card_name">name</span>
-                        <br>
-                        <div class="health">
-                            <img id="health" src="assets/health.png" alt="health">
-                            <span id="card_health">3</span>
-                        </div>
-                        <div class="atk">
-                            <span id="card_atk">4</span>
-                            <img id="atk" src="assets/atk.png" alt="atk">
-                        </div>
-                    </div>
-            
-                </div>
-
-                <div class="background">
-                    <div class="circle">
-                        <img id="curr" src="assets/currency.png" alt="cost">
-                        <span id="card_cost">4</span>
-            
-                    </div>
-                    <img id="charecter" src="assets/panther.jpeg" alt="hero">
-                    <div class="blank">
-                        <span id="card_name">name</span>
-                        <br>
-                        <div class="health">
-                            <img id="health" src="assets/health.png" alt="health">
-                            <span id="card_health">3</span>
-                        </div>
-                        <div class="atk">
-                            <span id="card_atk">4</span>
-                            <img id="atk" src="assets/atk.png" alt="atk">
-                        </div>
-                    </div>
-            
-                </div> <div class="background">
-                    <div class="circle">
-                        <img id="curr" src="assets/currency.png" alt="cost">
-                        <span id="card_cost">4</span>
-            
-                    </div>
-                    <img id="charecter" src="assets/panther.jpeg" alt="hero">
-                    <div class="blank">
-                        <span id="card_name">name</span>
-                        <br>
-                        <div class="health">
-                            <img id="health" src="assets/health.png" alt="health">
-                            <span id="card_health">3</span>
-                        </div>
-                        <div class="atk">
-                            <span id="card_atk">4</span>
-                            <img id="atk" src="assets/atk.png" alt="atk">
-                        </div>
-                    </div>
-            
-                </div> <div class="background">
-                    <div class="circle">
-                        <img id="curr" src="assets/currency.png" alt="cost">
-                        <span id="card_cost">4</span>
-            
-                    </div>
-                    <img id="charecter" src="assets/panther.jpeg" alt="hero">
-                    <div class="blank">
-                        <span id="card_name">name</span>
-                        <br>
-                        <div class="health">
-                            <img id="health" src="assets/health.png" alt="health">
-                            <span id="card_health">3</span>
-                        </div>
-                        <div class="atk">
-                            <span id="card_atk">4</span>
-                            <img id="atk" src="assets/atk.png" alt="atk">
-                        </div>
-                    </div>
-            
-                </div> -->
-            </div>
+            <div id="user_1_hand" class="hand"></div>
             <div class="curency_container">
                 <img class="curency" src="assets/currency.png" alt="currency">
                 <span id="player_1_currency">10/10</span>
@@ -140,6 +53,9 @@
         </div>
     </div>
 
+
+
+
     <!-- timer -->
     <script>
         let timerInterval;
@@ -162,21 +78,160 @@
         }
 
         function endTurn() {
-            alert('Turn ended!');
-            startTimer(); // Restart the timer for the next turn
+
+            if(turn){
+                // alert('Turn ended!');
+                startTimer(); // Restart the timer for the next turn
+                socket.emit('change_turn');
+
+            }
+
+            
         }
     
         document.getElementById('end_turn').addEventListener('click', () => {
-            clearInterval(timerInterval);
-            endTurn();
+
+
+            if(turn){
+                clearInterval(timerInterval);
+                endTurn();
+
+            }
+
+
         });
-        window.onload = startTimer;
+        // window.onload = startTimer;
     </script>    
+
+
+
+<!-- cards script -->
+<script>
+    class Card{
+    constructor(id, name, cost, hp, atk){
+        this.id = `card_${id}`
+        this.name = name
+        this.cost = cost
+        this.hp = hp
+        this.atk = atk
+
+    }
+}
+
+function shuffleArray(array) {
+    for (var i = array.length - 1; i > 0; i--) {
+        var j = Math.floor(Math.random() * (i + 1));
+        var temp = array[i];
+        array[i] = array[j];
+        array[j] = temp;
+    }
+}
+
+function init_deck(deck){
+
+    deck.push(new Card(0,"Ant-Man", 1, 1, 2));
+    deck.push(new Card(1,"Black Panther", 4, 5, 3));
+    deck.push(new Card(2,"Black Widow", 2, 2, 1));
+    deck.push(new Card(3,"Captain America", 5, 4, 4));
+    deck.push(new Card(4,"Captain Marvel", 8, 7, 5));
+    deck.push(new Card(5,"Doctor Strange", 5, 6, 2));
+    deck.push(new Card(6,"Hawkeye", 1, 1, 2));
+    deck.push(new Card(7,"Heimdal", 3, 3, 3));
+    deck.push(new Card(8,"Iron Man", 5, 5, 3));
+    deck.push(new Card(9,"Loki", 4, 5, 2));
+    deck.push(new Card(10,"Nebula", 2, 2, 3));
+    deck.push(new Card(11,"Nick Fury", 2, 3, 1));
+    deck.push(new Card(12,"Odin", 3, 2, 4));
+    deck.push(new Card(13,"Scarlet Witch", 5, 6, 3));
+    deck.push(new Card(14,"Spider-Man", 4, 3, 6));
+    deck.push(new Card(15,"Star-Lord", 1, 1, 3));
+    deck.push(new Card(16,"Thanos", 10, 6, 8));
+    deck.push(new Card(17,"Thor", 7, 5, 7));
+    deck.push(new Card(18,"Ultron", 6, 7, 3));
+    deck.push(new Card(19,"Vision", 6, 5, 5));
+
+    console.log("deck initialized succesfully")
+
+               
+}
+
+
+function append_user_card(obj) {
+    const hand = document.getElementById("user_1_hand");
+    const card = document.createElement("div");
+    card.innerHTML = ` <div class="circle">
+                        <img id="curr" src="assets/currency.png" alt="cost">
+                        <span id="card_cost">${obj.cost}</span>
+            
+                    </div>
+                    <img id="charecter" src="assets/${obj.name}.jpg" alt="hero">
+                    <div class="blank">
+                        <span class = "name">${obj.name}</span>
+                        <br>
+                        <div class="health">
+                            <img id="health" src="assets/health.png" alt="health">
+                            <span id="card_health">${obj.hp}</span>
+                        </div>
+                        <div class="atk">
+                            <span id="card_atk">${obj.atk}</span>
+                            <img id="atk" src="assets/atk.png" alt="atk">
+                        </div>
+                    </div>`
+
+
+    card.classList.add("background");
+    card.id = `${obj.id}`
+
+    hand.appendChild(card);
+
+    console.log("card appended succesfully")
+
+
+
+}
+
+function append_opp_card() {
+    const hand = document.getElementById("user_2_hand");
+    const card = document.createElement("div");
+    card.innerHTML = ` <img src="assets/card_red.jpeg" alt="deck" class = "background">`
+
+
+    card.classList.add("background");
+
+
+    hand.appendChild(card);
+
+    console.log("opp card appended succesfully")
+
+}
+
+</script>
+
+<!-- main script -->
 
   <script>
 
+
+
     let my_login =  document.getElementById("user_1_username");
     let opp_login =  document.getElementById("user_2_username");
+    let turn = false;
+
+    user_deck = [];
+    default_deck = []; //тут будемо брати по id від сервака
+
+    init_deck(user_deck);
+    init_deck(default_deck);
+
+    shuffleArray(user_deck);
+    for (let index = 0; index < 3; index++) {
+        append_user_card(user_deck[index]);
+
+    }
+    for (let index = 0; index < 3; index++) {
+        append_opp_card();
+
+    }
 
     let socket = io();
 
@@ -194,6 +249,23 @@
         socket.on('opp_login', (login) =>{
             opp_login.textContent = login;
         });
+
+        startTimer()
+
+    });
+
+    socket.on('change_turn', (player_id) =>{
+
+        if (socket.id === player_id) {
+            turn = true;
+            console.log("MY TURN")
+            startTimer();
+        }
+        else{
+            turn = false;
+            console.log("not my turn((")
+
+        }
 
     });
 
