--- a/views/battlefield.html
+++ b/views/battlefield.html
@@ -18,18 +18,19 @@
             <div id="user_2_hand" class="hand"></div>
             <div class="curency_container">
                 <img class="curency" src="assets/currency.png" alt="currency">
-                <span id="player_2_currency">10/10</span>
+                <span id="player_2_currency">10</span><span>/10</span>
+
             </div>
         </div>
 
-        <div class="play_area"></div>
-        <div class="play_area"></div>
+        <div id="table_user_2" class="play_area"></div>
+        <div id="table_user_1" class="play_area"></div>
         <div class="player_bar">
             <img class="deck" src="assets/card_blue.jpeg" alt="deck">
             <div id="user_1_hand" class="hand"></div>
             <div class="curency_container">
                 <img class="curency" src="assets/currency.png" alt="currency">
-                <span id="player_1_currency">10/10</span>
+                <span id="player_1_currency">10</span><span>/10</span>
             </div>
 
         </div>
@@ -118,92 +119,188 @@
     }
 }
 
-function shuffleArray(array) {
-    for (var i = array.length - 1; i > 0; i--) {
-        var j = Math.floor(Math.random() * (i + 1));
-        var temp = array[i];
-        array[i] = array[j];
-        array[j] = temp;
+    function shuffleArray(array) {
+        for (var i = array.length - 1; i > 0; i--) {
+            var j = Math.floor(Math.random() * (i + 1));
+            var temp = array[i];
+            array[i] = array[j];
+            array[j] = temp;
+        }
     }
-}
 
-function init_deck(deck){
+    function init_deck(deck){
 
-    deck.push(new Card(0,"Ant-Man", 1, 1, 2));
-    deck.push(new Card(1,"Black Panther", 4, 5, 3));
-    deck.push(new Card(2,"Black Widow", 2, 2, 1));
-    deck.push(new Card(3,"Captain America", 5, 4, 4));
-    deck.push(new Card(4,"Captain Marvel", 8, 7, 5));
-    deck.push(new Card(5,"Doctor Strange", 5, 6, 2));
-    deck.push(new Card(6,"Hawkeye", 1, 1, 2));
-    deck.push(new Card(7,"Heimdal", 3, 3, 3));
-    deck.push(new Card(8,"Iron Man", 5, 5, 3));
-    deck.push(new Card(9,"Loki", 4, 5, 2));
-    deck.push(new Card(10,"Nebula", 2, 2, 3));
-    deck.push(new Card(11,"Nick Fury", 2, 3, 1));
-    deck.push(new Card(12,"Odin", 3, 2, 4));
-    deck.push(new Card(13,"Scarlet Witch", 5, 6, 3));
-    deck.push(new Card(14,"Spider-Man", 4, 3, 6));
-    deck.push(new Card(15,"Star-Lord", 1, 1, 3));
-    deck.push(new Card(16,"Thanos", 10, 6, 8));
-    deck.push(new Card(17,"Thor", 7, 5, 7));
-    deck.push(new Card(18,"Ultron", 6, 7, 3));
-    deck.push(new Card(19,"Vision", 6, 5, 5));
+        deck.push(new Card(0,"Ant-Man", 1, 1, 2));
+        deck.push(new Card(1,"Black Panther", 4, 5, 3));
+        deck.push(new Card(2,"Black Widow", 2, 2, 1));
+        deck.push(new Card(3,"Captain America", 5, 4, 4));
+        deck.push(new Card(4,"Captain Marvel", 8, 7, 5));
+        deck.push(new Card(5,"Doctor Strange", 5, 6, 2));
+        deck.push(new Card(6,"Hawkeye", 1, 1, 2));
+        deck.push(new Card(7,"Heimdal", 3, 3, 3));
+        deck.push(new Card(8,"Iron Man", 5, 5, 3));
+        deck.push(new Card(9,"Loki", 4, 5, 2));
+        deck.push(new Card(10,"Nebula", 2, 2, 3));
+        deck.push(new Card(11,"Nick Fury", 2, 3, 1));
+        deck.push(new Card(12,"Odin", 3, 2, 4));
+        deck.push(new Card(13,"Scarlet Witch", 5, 6, 3));
+        deck.push(new Card(14,"Spider-Man", 4, 3, 6));
+        deck.push(new Card(15,"Star-Lord", 1, 1, 3));
+        deck.push(new Card(16,"Thanos", 10, 6, 8));
+        deck.push(new Card(17,"Thor", 7, 5, 7));
+        deck.push(new Card(18,"Ultron", 6, 7, 3));
+        deck.push(new Card(19,"Vision", 6, 5, 5));
 
-    console.log("deck initialized succesfully")
+        console.log("deck initialized succesfully")
 
-               
-}
+                
+    }
 
 
-function append_user_card(obj) {
-    const hand = document.getElementById("user_1_hand");
-    const card = document.createElement("div");
-    card.innerHTML = ` <div class="circle">
-                        <img id="curr" src="assets/currency.png" alt="cost">
-                        <span id="card_cost">${obj.cost}</span>
+    function append_user_card_hand(obj) {        //створює картку юзера в руці
+        const hand = document.getElementById("user_1_hand");
+        const card = document.createElement("div");
+        card.innerHTML = ` <div class="circle">
+                            <img id="curr" src="assets/currency.png" alt="cost">
+                            <span id="card_cost">${obj.cost}</span>
+                
+                        </div>
+                        <img id="charecter" src="assets/${obj.name}.jpg" alt="hero">
+                        <div class="blank">
+                            <span class = "name">${obj.name}</span>
+                            <br>
+                            <div class="health">
+                                <img id="health" src="assets/health.png" alt="health">
+                                <span id="card_health">${obj.hp}</span>
+                            </div>
+                            <div class="atk">
+                                <span id="card_atk">${obj.atk}</span>
+                                <img id="atk" src="assets/atk.png" alt="atk">
+                            </div>
+                        </div>`
+
+
+        card.classList.add("background");
+        card.id = `hand_${obj.id}`
+
+        card.addEventListener("click", () =>{
+            if(turn) play_card(obj);
             
-                    </div>
-                    <img id="charecter" src="assets/${obj.name}.jpg" alt="hero">
-                    <div class="blank">
-                        <span class = "name">${obj.name}</span>
-                        <br>
-                        <div class="health">
-                            <img id="health" src="assets/health.png" alt="health">
-                            <span id="card_health">${obj.hp}</span>
+        });
+
+        hand.appendChild(card);
+
+        console.log("card appended succesfully")
+
+
+
+    }
+
+    function append_opp_card_hand() {
+        const hand = document.getElementById("user_2_hand");
+        const card = document.createElement("div");
+        card.innerHTML = ` <img src="assets/card_red.jpeg" alt="deck" class = "background">`
+
+
+        card.classList.add("background");
+
+
+        hand.appendChild(card);
+
+        console.log("opp card appended succesfully")
+
+    }
+
+
+    function append_user_card_table(obj) {    //створює картку від юзера на столі
+        const hand = document.getElementById("table_user_1");
+        const card = document.createElement("div");
+        card.innerHTML = ` <div class="circle">
+                            <img id="curr" src="assets/currency.png" alt="cost">
+                            <span id="card_cost">${obj.cost}</span>
+                
                         </div>
-                        <div class="atk">
-                            <span id="card_atk">${obj.atk}</span>
-                            <img id="atk" src="assets/atk.png" alt="atk">
+                        <img id="charecter" src="assets/${obj.name}.jpg" alt="hero">
+                        <div class="blank">
+                            <span class = "name">${obj.name}</span>
+                            <br>
+                            <div class="health">
+                                <img id="health" src="assets/health.png" alt="health">
+                                <span id="card_health">${obj.hp}</span>
+                            </div>
+                            <div class="atk">
+                                <span id="card_atk">${obj.atk}</span>
+                                <img id="atk" src="assets/atk.png" alt="atk">
+                            </div>
+                        </div>`
+
+
+        card.classList.add("background");
+        card.id = `${obj.id}`
+
+        // card.addEventListener("click", () =>{         //можлтвість атакувати тут
+
+        // });
+
+        hand.appendChild(card);
+
+        console.log("card appended succesfully")
+
+
+
+    }
+
+    function append_opp_card_table(obj) {        //створює картку від суперника на столі (через сокети)
+        const hand = document.getElementById("table_user_2");
+        const card = document.createElement("div");
+        card.innerHTML = ` <div class="circle">
+                            <img id="curr" src="assets/currency.png" alt="cost">
+                            <span id="card_cost">${obj.cost}</span>
+                
                         </div>
-                    </div>`
+                        <img id="charecter" src="assets/${obj.name}.jpg" alt="hero">
+                        <div class="blank">
+                            <span class = "name">${obj.name}</span>
+                            <br>
+                            <div class="health">
+                                <img id="health" src="assets/health.png" alt="health">
+                                <span id="card_health">${obj.hp}</span>
+                            </div>
+                            <div class="atk">
+                                <span id="card_atk">${obj.atk}</span>
+                                <img id="atk" src="assets/atk.png" alt="atk">
+                            </div>
+                        </div>`
 
 
-    card.classList.add("background");
-    card.id = `${obj.id}`
+        card.classList.add("background");
+        card.id = `${obj.id}`
 
-    hand.appendChild(card);
+        hand.appendChild(card);
 
-    console.log("card appended succesfully")
-
-
-
-}
-
-function append_opp_card() {
-    const hand = document.getElementById("user_2_hand");
-    const card = document.createElement("div");
-    card.innerHTML = ` <img src="assets/card_red.jpeg" alt="deck" class = "background">`
+        console.log("card appended succesfully")
 
 
-    card.classList.add("background");
+
+    }
 
 
-    hand.appendChild(card);
+    function play_card(obj){
+        const currency = document.getElementById("player_1_currency")
+        const card = document.getElementById(`hand_${obj.id}`)
 
-    console.log("opp card appended succesfully")
+        let resourse = parseInt(currency.textContent)
+        if (resourse - obj.cost >= 0) {
+            resourse = resourse - obj.cost
+            currency.textContent = `${resourse}`
+            append_user_card_table(obj)
+            console.log(`card appended with id ${obj.id}`)
+            card.remove()
+        }
+        
 
-}
+
+    }
 
 </script>
 
@@ -225,13 +322,16 @@ function append_opp_card() {
 
     shuffleArray(user_deck);
     for (let index = 0; index < 3; index++) {
-        append_user_card(user_deck[index]);
+        append_user_card_hand(user_deck[index]);
 
     }
     for (let index = 0; index < 3; index++) {
-        append_opp_card();
+        append_opp_card_hand();
 
     }
+
+ 
+
 
     let socket = io();
 
