--- a/views/battlefield.html
+++ b/views/battlefield.html
@@ -319,6 +319,7 @@
     
         selectedCard.classList.remove('selected');
         selectedCard = null;
+        endTurn();
     }
     
 
@@ -351,6 +352,7 @@
   
         selectedCard.classList.remove('selected');
         selectedCard = null;
+        endTurn();
     }
 
     function play_card(obj){
